--- a/Ders14/IO/IComparable-1/IComparable-1.csproj
+++ b/Ders14/IO/IComparable-1/IComparable-1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FAB2D7E8-4C6C-4AF2-9C70-128368A37AD8}</ProjectGuid>
+    <ProjectGuid>{B3D16E19-2D29-4327-8B0A-32A0F424B79B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>interface_1</RootNamespace>
-    <AssemblyName>interface-1</AssemblyName>
+    <RootNamespace>IComparable_1</RootNamespace>
+    <AssemblyName>IComparable-1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Product.cs" />
+    <Compile Include="Personel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
