--- a/Ders31/LINQ/LINQ/App.config
+++ b/Ders31/LINQ/LINQ/App.config
@@ -6,6 +6,9 @@
         <add name="LINQ.Properties.Settings.CalismaConnectionString"
             connectionString="Data Source=SERKAN;Initial Catalog=Calisma;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="LINQ.Properties.Settings.CalismaaConnectionString"
+            connectionString="Data Source=.;Initial Catalog=Calismaa;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
